Slider small review image spacing bug resolved

--- a/src/assets/css/sass_assets/property_page/_images_slider_small.scss
+++ b/src/assets/css/sass_assets/property_page/_images_slider_small.scss
@@ -21,8 +21,7 @@
 		cursor: pointer;
 
 		.review-image {
-			top: -24px;
-			transition: transform 300ms ease-in-out;
+			transition: transform 2s ease-in-out;
 
 			&:hover { opacity: 0.9 }
 		}
